--- a/services/auth/.golangci.pipeline.yaml
+++ b/services/auth/.golangci.pipeline.yaml
@@ -4,28 +4,21 @@ run:
   timeout: 10m
   issues-exit-code: 1
   tests: true
-  skip-dirs:
-    - bin
-    - vendor
-    - var
-    - tmp
-    - .cache
-  skip-files:
-    - \.pb\.go$
-    - \.pb\.gw\.go$
 
 output:
-  format: colored-line-number
+  formats:
+    - format: colored-line-number
+      path: stderr
   print-issued-lines: true
   print-linter-name: true
 
 linters-settings:
   govet:
-    check-shadowing: true
+    shadow: true
   dupl:
     threshold: 100
   goconst:
-    min-len:         2
+    min-len: 2
     min-occurrences: 2
 
 linters:
@@ -33,16 +26,26 @@ linters:
   enable:
     - errcheck
     - goconst
-    - goimports
     - gosec
     - govet
     - ineffassign
-    - megacheck
+    - gosimple
+    - staticcheck
     - revive
     - typecheck
     - unused
 
 issues:
+  exclude-files:
+    - \.pb\.go$
+    - \.pb\.gw\.go$
+  exclude-dirs:
+    - bin
+    - vendor
+    - var
+    - tmp
+    - .cache
+    - go
   exclude-use-default: false
   exclude:
     # _ instead of err checks
