--- a/services/auth/Makefile
+++ b/services/auth/Makefile
@@ -4,4 +4,4 @@ install-golangci-lint:
 	GOBIN=$(LOCAL_BIN) go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.59
 
 lint:
-	$(LOCAL_BIN)/golangci-lint run ./... --config ./.golangci.pipeline.yaml
+	$(LOCAL_BIN)/golangci-lint run ./... --config ../../.golangci.pipeline.yaml
