--- a/.github/workflows/auth.yaml
+++ b/.github/workflows/auth.yaml
@@ -3,16 +3,20 @@ on:
   push:
     branches:
       - main
+      - dev
     paths:
       - 'services/auth/**'
   pull_request:
     branches:
       - main
+      - dev
     paths:
       - 'services/auth/**'
 
 env:
   SERVICE_PATH: ./services/auth
+  SERVICE_NAME: auth
+  DOCKER_REGISTRY_URL: cr.selcloud.ru/genvekt-cli-chat
 
 jobs:
   build-and-test:
@@ -72,3 +76,25 @@ jobs:
 
           # Optional: The mode to install golangci-lint. It can be 'binary' or 'goinstall'.
           # install-mode: "goinstall"
+
+  image-build-and-push:
+    runs-on: ubuntu-20.04
+    needs:
+      - build-and-test
+      - linter
+    # if: github.event_name != 'pull_request'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to Docker Registry
+        run: docker login -u ${{ secrets.DOCKER_REGISTRY_USERNAME }} -p ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
+
+      - name: Build and Push Docker Image
+        run: |
+          IMAGE_TAG=$(echo $GITHUB_SHA | head -c7)
+          docker buildx create --use
+          docker buildx build --no-cache --push --tag $DOCKER_REGISTRY_URL/$SERVICE_NAME:$IMAGE_TAG -f $SERVICE_PATH/Dockerfile $SERVICE_PATH
