--- a/.github/workflows/auth.yaml
+++ b/.github/workflows/auth.yaml
@@ -91,7 +91,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Login to Docker Registry
-        run: docker login -u ${{ secrets.DOCKER_REGISTRY_USERNAME }} -p ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
+        run: docker login -u ${{ secrets.DOCKER_REGISTRY_USERNAME }} -p ${{ secrets.DOCKER_REGISTRY_PASSWORD }} $DOCKER_REGISTRY_URL
 
       - name: Build and Push Docker Image
         run: |
