--- a/.github/workflows/auth.yaml
+++ b/.github/workflows/auth.yaml
@@ -97,4 +97,4 @@ jobs:
         run: |
           IMAGE_TAG=$(echo $GITHUB_SHA | head -c7)
           docker buildx create --use
-          docker buildx build --no-cache --push --tag $DOCKER_REGISTRY_URL/$SERVICE_NAME:$IMAGE_TAG -f $SERVICE_PATH/Dockerfile $SERVICE_PATH
+          docker buildx build --no-cache --push --tag $DOCKER_REGISTRY_URL/$SERVICE_NAME:$IMAGE_TAG -f $SERVICE_PATH/Dockerfile .
