--- a/.github/workflows/auth.yaml
+++ b/.github/workflows/auth.yaml
@@ -98,5 +98,5 @@ jobs:
         run: |
           IMAGE_TAG=$(git rev-parse --short "$GITHUB_SHA")
           docker buildx create --use
-          docker buildx build --no-cache --push --tag $DOCKER_REGISTRY_URL/$SERVICE_NAME:$IMAGE_TAG -f $SERVICE_PATH/Dockerfile
+          docker buildx build --no-cache --push --tag $DOCKER_REGISTRY_URL/$SERVICE_NAME:$IMAGE_TAG -f $SERVICE_PATH/Dockerfile .
           echo "Pushed image $DOCKER_REGISTRY_URL/$SERVICE_NAME:$IMAGE_TAG"
