--- a/.github/workflows/auth.yaml
+++ b/.github/workflows/auth.yaml
@@ -87,15 +87,35 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Setup Docker Tag
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          # list of Docker images to use as base name for tags
+          images: |
+            ${{env.DOCKER_REGISTRY_URL}}/${{env.SERVICE_NAME}}
+          # generate Docker tags based on the following events/attributes
+          tags: |
+            type=sha,prefix=,suffix=,format=short
+
       - name: Setup Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Registry
-        run: docker login -u ${{ secrets.DOCKER_REGISTRY_USERNAME }} -p ${{ secrets.DOCKER_REGISTRY_PASSWORD }} $DOCKER_REGISTRY_URL
+      - name: Login to Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{env.DOCKER_REGISTRY_URL}}
+          username: ${{secrets.DOCKER_REGISTRY_USERNAME}}
+          password: ${{secrets.DOCKER_REGISTRY_PASSWORD}}
 
-      - name: Build and Push Docker Image
-        run: |
-          IMAGE_TAG=$(git rev-parse --short "$GITHUB_SHA")
-          docker buildx create --use
-          docker buildx build --no-cache --push --tag $DOCKER_REGISTRY_URL/$SERVICE_NAME:$IMAGE_TAG -f $SERVICE_PATH/Dockerfile .
-          echo "Pushed image $DOCKER_REGISTRY_URL/$SERVICE_NAME:$IMAGE_TAG"
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          file: ${{ env.SERVICE_PATH }}/Dockerfile
+          context: .
+          no-cache: true
+
+      - name: Log image tags
+        run: echo "Pushed image with tags ${{ steps.meta.outputs.tags }}"
