--- a/.github/workflows/auth.yaml
+++ b/.github/workflows/auth.yaml
@@ -98,6 +98,9 @@ jobs:
           tags: |
             type=sha,prefix=,suffix=,format=short
 
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Login to Registry
         uses: docker/login-action@v3
         with:
@@ -105,20 +108,24 @@ jobs:
           username: ${{secrets.DOCKER_REGISTRY_USERNAME}}
           password: ${{secrets.DOCKER_REGISTRY_PASSWORD}}
 
-#      - name: Build and push
-#        uses: docker/build-push-action@v6
-#        with:
-#          push: true
-#          tags: ${{ steps.meta.outputs.tags }}
-#          file: ${{ env.SERVICE_PATH }}/Dockerfile
-#          context: .
-#          no-cache: true
-
-      - name: Build image
-        run: docker build -t ${{ steps.meta.outputs.tags }} -f ${{ env.SERVICE_PATH }}/Dockerfile .
-
-      - name: Push image
-        run: docker push ${{ steps.meta.outputs.tags }}
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          file: ${{ env.SERVICE_PATH }}/Dockerfile
+          context: .
+          no-cache: true
+          provenance: false
 
       - name: Log image tags
         run: echo "Pushed image with tags ${{ steps.meta.outputs.tags }}"
+
+#      - name: Build image
+#        run: docker build -t ${{ steps.meta.outputs.tags }} -f ${{ env.SERVICE_PATH }}/Dockerfile .
+#
+#      - name: Push image
+#        run: docker push ${{ steps.meta.outputs.tags }}
+#
+#      - name: Log image tags
+#        run: echo "Pushed image with tags ${{ steps.meta.outputs.tags }}"
