setup build and deploy ci actions

--- a/.github/workflows/chat-server.yaml
+++ b/.github/workflows/chat-server.yaml
@@ -3,11 +3,13 @@ on:
   push:
     branches:
       - main
+      - dev
     paths:
       - 'services/chat_server/**'
   pull_request:
     branches:
       - main
+      - dev
     paths:
       - 'services/chat_server/**'
 
