--- a/.github/workflows/auth-db.yaml
+++ b/.github/workflows/auth-db.yaml
@@ -17,16 +17,40 @@ on:
 
 env:
   DB_DIR: services/auth/db/postgres
+  MIGRATOR_IMAGE: auth_migrator
+  DOCKER_REGISTRY_URL: cr.selcloud.ru/genvekt-cli-chat
 
 jobs:
   build:
     name: Build migrator
     runs-on: ubuntu-20.04
+    outputs:
+      docker-tag: ${{ steps.meta.outputs.tag }}
     steps:
       - uses: actions/checkout@v3
+
       - name: Create .env file
         run: |
           touch ${{ env.DB_DIR }}/prod.env
           echo "${{ secrets.AUTH_POSTGRES_ENV_FILE }}" > ${{ env.DB_DIR }}/prod.env
-      - name: Log .env file
-        run: cat ${{ env.DB_DIR }}/prod.env
+
+      - name: Setup Docker Tag
+        id: meta
+        run: |
+          echo "tag=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+
+      - name: Build migrator
+        run: |
+          touch ${{ env.DB_DIR }}/.env
+          echo "MIGRATOR_IMAGE=${{ env.DOCKER_REGISTRY_URL }}/${{ env.MIGRATOR_IMAGE }}:${{ steps.meta.outputs.tag }}" >> ${{ env.DB_DIR }}/.env
+          docker-compose -f ${{ env.DB_DIR }}/docker-compose-prod.yaml build
+
+      - name: Login to Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{env.DOCKER_REGISTRY_URL}}
+          username: ${{secrets.DOCKER_REGISTRY_USERNAME}}
+          password: ${{secrets.DOCKER_REGISTRY_PASSWORD}}
+
+      - name: Push to registry
+        run: docker image push ${{ env.DOCKER_REGISTRY_URL }}/${{ env.MIGRATOR_IMAGE }}:${{ steps.meta.outputs.tag }}
