add image var to compose

--- a/.github/workflows/auth-db.yaml
+++ b/.github/workflows/auth-db.yaml
@@ -41,9 +41,8 @@ jobs:
 
       - name: Build migrator
         run: |
-          touch ${{ env.DB_DIR }}/.env
-          echo "MIGRATOR_IMAGE=${{ env.DOCKER_REGISTRY_URL }}/${{ env.MIGRATOR_IMAGE }}:${{ steps.meta.outputs.tag }}" >> ${{ env.DB_DIR }}/.env
           docker-compose -f ${{ env.DB_DIR }}/docker-compose-prod.yaml build
+          docker tag ${{ env.MIGRATOR_IMAGE }}:latest ${{ env.DOCKER_REGISTRY_URL }}/${{ env.MIGRATOR_IMAGE }}:${{ steps.meta.outputs.tag }}
 
       - name: Login to Registry
         uses: docker/login-action@v3
