--- a/services/auth/db/postgres/docker-compose-prod.yaml
+++ b/services/auth/db/postgres/docker-compose-prod.yaml
@@ -16,7 +16,7 @@ services:
 
   migrator:
     container_name: auth_migrator
-    image: ${MIGRATOR_IMAGE}
+    image: auth_migrator
     build:
       context: .
       dockerfile: migrator/migrator-prod.Dockerfile
