add image var to compose

--- a/.github/workflows/auth-db.yaml
+++ b/.github/workflows/auth-db.yaml
@@ -63,6 +63,7 @@ jobs:
           eval `ssh-agent -s`
           touch key-file
           echo "${{secrets.SSH_KEY}}" >> key-file
+          chmod 600 key-file
           ssh-add key-file
 
       - name: Stop previous version
