--- a/.github/workflows/auth-db.yaml
+++ b/.github/workflows/auth-db.yaml
@@ -87,4 +87,4 @@ jobs:
             # Login into Selectel Registry
             docker login -u ${{secrets.DOCKER_REGISTRY_USERNAME}} -p ${{secrets.DOCKER_REGISTRY_PASSWORD}} ${{env.DOCKER_REGISTRY_URL}}
             cd ~/.deploy/${{ env.DB_DIR }}
-            docker-compose -f ./docker-compose.prod.yml up -d
+            docker-compose -f ./docker-compose.prod.yaml up -d
