--- a/.github/workflows/auth.yaml
+++ b/.github/workflows/auth.yaml
@@ -3,11 +3,13 @@ on:
   push:
     branches:
       - main
+      - dev
     paths:
       - 'services/auth/**'
   pull_request:
     branches:
       - main
+      - dev
     paths:
       - 'services/auth/**'
 
@@ -63,6 +65,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Generate env file
+        run: |
+          touch ${{ env.SERVICE_PATH }}/prod.env
+          echo "${{ secrets.AUTH_ENV_FILE }}" > ${{ env.SERVICE_PATH }}/prod.env
+
       - name: Setup Docker Tag
         id: meta
         uses: docker/metadata-action@v5
@@ -89,7 +96,7 @@ jobs:
         with:
           push: true # github.event_name != 'pull_request'
           tags: ${{ steps.meta.outputs.tags }}
-          file: ${{ env.SERVICE_PATH }}/Dockerfile
+          file: ${{ env.SERVICE_PATH }}/prod.Dockerfile
           context: .
           no-cache: true
           provenance: false  # With this setting tags appear in registry!
