--- a/.github/workflows/auth-db.yaml
+++ b/.github/workflows/auth-db.yaml
@@ -3,12 +3,14 @@ on:
   push:
     branches:
       - main
+      - dev
     paths:
       - 'services/auth/**'
       - 'services/auth/db/postgres/migrations/**'
   pull_request:
     branches:
       - main
+      - dev
     paths:
       - 'services/auth/**'
       - 'services/auth/db/postgres/migrations/**'
