--- a/.github/workflows/auth.yaml
+++ b/.github/workflows/auth.yaml
@@ -3,11 +3,13 @@ on:
   push:
     branches:
       - main
+      - dev
     paths:
       - 'services/auth/**'
   pull_request:
     branches:
       - main
+      - dev
     paths:
       - 'services/auth/**'
 
