--- a/.github/workflows/chat-server-db.yaml
+++ b/.github/workflows/chat-server-db.yaml
@@ -1,16 +1,14 @@
-name: chat_server DB
+name: chat-server DB
 on:
   push:
     branches:
       - main
-      - dev
     paths:
       - 'services/chat_server/**'
       - 'services/chat_server/db/postgres/migrations/**'
   pull_request:
     branches:
       - main
-      - dev
     paths:
       - 'services/chat_server/**'
       - 'services/chat_server/db/postgres/migrations/**'
@@ -58,7 +56,7 @@ jobs:
         run: docker image push ${{ env.MIGRATOR_IMAGE }}
 
   deploy:
-    name: Deploy DB and Migrate
+    name: Deploy DB and Migrate on Selectel Cloud
     runs-on: ubuntu-20.04
     needs:
       - build-and-push
@@ -78,7 +76,7 @@ jobs:
           echo "MIGRATOR_IMAGE=${{ env.DOCKER_REGISTRY_URL }}/${{ env.MIGRATOR_IMAGE_NAME }}:${{ needs.build-and-push.outputs.tag }}" >> ${{ env.DB_DIR }}/.env
 
         # Copy docker-compose and .env files to target server
-      - name: copy files to target server via scp
+      - name: Send docker compose to Selectel server
         uses: appleboy/scp-action@v0.1.3
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -88,7 +86,7 @@ jobs:
           source: "${{ env.DB_DIR }}/docker-compose.prod.yaml,${{ env.DB_DIR }}/.env,${{ env.DB_DIR }}/prod.env"
           target: "~/.deploy/"
 
-      - name: Run remote db migrations
+      - name: Run DB and Migrate
         uses: appleboy/ssh-action@v0.1.5
         with:
           host: ${{ secrets.SSH_HOST }}
