--- a/.github/workflows/chat-server.yaml
+++ b/.github/workflows/chat-server.yaml
@@ -3,13 +3,11 @@ on:
   push:
     branches:
       - main
-      - dev
     paths:
       - 'services/chat_server/**'
   pull_request:
     branches:
       - main
-      - dev
     paths:
       - 'services/chat_server/**'
 
@@ -59,7 +57,7 @@ jobs:
     runs-on: ubuntu-20.04
     needs:
       - build-and-test
-      #- linter
+      - linter
     outputs:
       docker-image: ${{ steps.meta.outputs.tags }}
     steps:
