grps gateway, validation and swagger server

--- a/libraries/api/Makefile
+++ b/libraries/api/Makefile
@@ -3,28 +3,62 @@ LOCAL_BIN:=$(CURDIR)/bin
 install-deps:
 	GOBIN=$(LOCAL_BIN) go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.28.1
 	GOBIN=$(LOCAL_BIN) go install -mod=mod google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.2
+	GOBIN=$(LOCAL_BIN) go install github.com/envoyproxy/protoc-gen-validate@v1.0.4
+	GOBIN=$(LOCAL_BIN) go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-grpc-gateway@v2.20.0
+	GOBIN=$(LOCAL_BIN) go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2@v2.20.0
 
 get-deps:
 	go get -u google.golang.org/protobuf/cmd/protoc-gen-go
 	go get -u google.golang.org/grpc/cmd/protoc-gen-go-grpc
-
 
 generate:
 	make generate-user-api
 	make generate-chat-api
 
 generate-user-api:
-	protoc --proto_path user/v1 \
+	protoc --proto_path user/v1 --proto_path vendor.protogen \
 	--go_out=user/v1 --go_opt=paths=source_relative \
 	--plugin=protoc-gen-go=bin/protoc-gen-go \
     --go-grpc_out=user/v1 --go-grpc_opt=paths=source_relative \
     --plugin=protoc-gen-go-grpc=bin/protoc-gen-go-grpc \
+    --validate_out lang=go:user/v1 --validate_opt=paths=source_relative \
+    --plugin=protoc-gen-validate=bin/protoc-gen-validate \
+    --grpc-gateway_out=user/v1 --grpc-gateway_opt=paths=source_relative \
+    --plugin=protoc-gen-grpc-gateway=bin/protoc-gen-grpc-gateway \
+    --openapiv2_out=allow_merge=true,merge_file_name=api:user/swagger \
+    --plugin=protoc-gen-openapiv2=bin/protoc-gen-openapiv2 \
     user/v1/user.proto
 
 generate-chat-api:
-	protoc --proto_path chat/v1 \
+	protoc --proto_path chat/v1 --proto_path vendor.protogen \
 	--go_out=chat/v1 --go_opt=paths=source_relative \
 	--plugin=protoc-gen-go=bin/protoc-gen-go \
     --go-grpc_out=chat/v1 --go-grpc_opt=paths=source_relative \
     --plugin=protoc-gen-go-grpc=bin/protoc-gen-go-grpc \
+    --validate_out lang=go:chat/v1 --validate_opt=paths=source_relative \
+    --plugin=protoc-gen-validate=bin/protoc-gen-validate \
+    --grpc-gateway_out=chat/v1 --grpc-gateway_opt=paths=source_relative \
+    --plugin=protoc-gen-grpc-gateway=bin/protoc-gen-grpc-gateway \
+    --openapiv2_out=allow_merge=true,merge_file_name=api:chat/swagger \
+    --plugin=protoc-gen-openapiv2=bin/protoc-gen-openapiv2 \
     chat/v1/chat.proto
+
+vendor-proto:
+	@if [ ! -d vendor.protogen/validate ]; then \
+		mkdir -p vendor.protogen/validate &&\
+		git clone https://github.com/envoyproxy/protoc-gen-validate vendor.protogen/protoc-gen-validate &&\
+		mv vendor.protogen/protoc-gen-validate/validate/*.proto vendor.protogen/validate &&\
+		rm -rf vendor.protogen/protoc-gen-validate ;\
+	fi
+	@if [ ! -d vendor.protogen/google ]; then \
+		git clone https://github.com/googleapis/googleapis vendor.protogen/googleapis &&\
+		mkdir -p  vendor.protogen/google/ &&\
+		mv vendor.protogen/googleapis/google/api vendor.protogen/google &&\
+		rm -rf vendor.protogen/googleapis ;\
+	fi
+	@if [ ! -d vendor.protogen/protoc-gen-openapiv2 ]; then \
+		mkdir -p vendor.protogen/protoc-gen-openapiv2/options &&\
+		git clone https://github.com/grpc-ecosystem/grpc-gateway vendor.protogen/openapiv2 &&\
+		mv vendor.protogen/openapiv2/protoc-gen-openapiv2/options/*.proto vendor.protogen/protoc-gen-openapiv2/options &&\
+		rm -rf vendor.protogen/openapiv2 ;\
+	fi
